49: Remove IT tests